[gd_scene load_steps=20 format=2]

[ext_resource path="res://Levels/Level Player.gd" type="Script" id=1]
[ext_resource path="res://Art/UI/PanelBG.tres" type="StyleBox" id=2]
[ext_resource path="res://Art/Fonts/UI.tres" type="DynamicFont" id=3]
[ext_resource path="res://Art/Buttons/ButtonHover_Pressed.tres" type="StyleBox" id=4]
[ext_resource path="res://Art/Buttons/ButtonNormal.tres" type="StyleBox" id=5]
[ext_resource path="res://Levels/CustomLevel.gd" type="Script" id=6]
[ext_resource path="res://UI.tscn" type="PackedScene" id=7]
[ext_resource path="res://Player.tscn" type="PackedScene" id=8]
[ext_resource path="res://Tilecostumes/Tile.tscn" type="PackedScene" id=9]
[ext_resource path="res://Art/Fonts/UI_20.tres" type="DynamicFont" id=10]
[ext_resource path="res://Art/Buttons/RedColorPicked.tres" type="StyleBox" id=11]
[ext_resource path="res://Art/Buttons/RedColorPick.tres" type="StyleBox" id=12]
[ext_resource path="res://Art/Buttons/GreenColorPicked.tres" type="StyleBox" id=13]
[ext_resource path="res://Art/Buttons/BlueColorPick.tres" type="StyleBox" id=14]
[ext_resource path="res://Art/Buttons/WhiteColorPick.tres" type="StyleBox" id=15]
[ext_resource path="res://Art/Buttons/WhiteColorPicked.tres" type="StyleBox" id=16]
[ext_resource path="res://Art/Buttons/BlueColorPicked.tres" type="StyleBox" id=17]
[ext_resource path="res://Art/Buttons/GreenColorPick.tres" type="StyleBox" id=18]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Level Player" type="Node"]
script = ExtResource( 1 )

[node name="Level999" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="Level999"]

[node name="UI" parent="Level999/CanvasLayer" instance=ExtResource( 7 )]
visible = false

[node name="Player" parent="Level999" instance=ExtResource( 8 )]
position = Vector2( 384, 192 )

[node name="Tile" parent="Level999" instance=ExtResource( 9 )]
position = Vector2( 384, 224 )

[node name="Level Editor" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.10352e-05
margin_bottom = 3.05176e-05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Level Editor"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -608.0
margin_bottom = -3.05176e-05
size_flags_horizontal = 0
custom_styles/panel = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="Level Editor/Panel"]
margin_right = 80.0
margin_bottom = 46.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlueButton" type="Button" parent="Level Editor/Panel" groups=[
"colorButton",
]]
margin_left = 56.0
margin_top = 64.0
margin_right = 96.0
margin_bottom = 104.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = ExtResource( 17 )
custom_styles/pressed = ExtResource( 17 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 14 )
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RedButton" type="Button" parent="Level Editor/Panel" groups=[
"colorButton",
]]
margin_left = 8.0
margin_top = 64.0
margin_right = 48.0
margin_bottom = 104.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 12 )
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GreenButton" type="Button" parent="Level Editor/Panel" groups=[
"colorButton",
]]
margin_left = 104.0
margin_top = 64.0
margin_right = 144.0
margin_bottom = 104.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = ExtResource( 13 )
custom_styles/pressed = ExtResource( 13 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 18 )
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WhiteButton" type="Button" parent="Level Editor/Panel" groups=[
"colorButton",
]]
margin_left = 56.0
margin_top = 112.0
margin_right = 96.0
margin_bottom = 152.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = ExtResource( 16 )
custom_styles/pressed = ExtResource( 16 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 15 )
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileAdder" type="Button" parent="Level Editor/Panel"]
margin_left = 24.0
margin_top = 376.0
margin_right = 136.0
margin_bottom = 422.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Tile"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OrbAdder" type="Button" parent="Level Editor/Panel"]
margin_left = 24.0
margin_top = 248.0
margin_right = 136.0
margin_bottom = 294.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Orb"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HazardAdder" type="Button" parent="Level Editor/Panel"]
margin_left = 24.0
margin_top = 184.0
margin_right = 136.0
margin_bottom = 230.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Hazard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitAdder" type="Button" parent="Level Editor/Panel"]
margin_left = 24.0
margin_top = 312.0
margin_right = 136.0
margin_bottom = 358.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="Level Editor"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 608.0
margin_right = -6.10352e-05
margin_bottom = -3.05176e-05
size_flags_horizontal = 0
custom_styles/panel = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="Level Editor/Panel2"]
margin_left = 32.0
margin_top = 376.0
margin_right = 128.0
margin_bottom = 422.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CameraButton" type="Button" parent="Level Editor/Panel2"]
margin_left = 16.0
margin_top = 24.0
margin_right = 144.0
margin_bottom = 70.0
rect_min_size = Vector2( 128, 0 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
toggle_mode = true
text = "Camera"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerColorButton" type="Button" parent="Level Editor/Panel2"]
margin_left = 16.0
margin_top = 88.0
margin_right = 144.0
margin_bottom = 134.0
rect_min_size = Vector2( 128, 0 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Player"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="Level Editor" to="." method="_on_Level_Editor_gui_input"]
[connection signal="pressed" from="Level Editor/Panel/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Level Editor/Panel/BlueButton" to="." method="_on_BlueButton_pressed"]
[connection signal="pressed" from="Level Editor/Panel/RedButton" to="." method="_on_RedButton_pressed"]
[connection signal="pressed" from="Level Editor/Panel/GreenButton" to="." method="_on_GreenButton_pressed"]
[connection signal="pressed" from="Level Editor/Panel/WhiteButton" to="." method="_on_WhiteButton_pressed"]
[connection signal="pressed" from="Level Editor/Panel/TileAdder" to="." method="_on_TileAdder_pressed"]
[connection signal="pressed" from="Level Editor/Panel/OrbAdder" to="." method="_on_OrbAdder_pressed"]
[connection signal="pressed" from="Level Editor/Panel/HazardAdder" to="." method="_on_HazardAdder_pressed"]
[connection signal="pressed" from="Level Editor/Panel/ExitAdder" to="." method="_on_ExitAdder_pressed"]
[connection signal="pressed" from="Level Editor/Panel2/PlayButton" to="Level999" method="_on_PlayButton_pressed"]
[connection signal="toggled" from="Level Editor/Panel2/CameraButton" to="Level999" method="_on_CameraButton_toggled"]
[connection signal="pressed" from="Level Editor/Panel2/PlayerColorButton" to="." method="_on_PlayerColorButton_pressed"]
